Closed Bug 1920128 Opened 1 year ago Closed 1 year ago

Service Worker RFP Randomization key ignores origin attubutes

Categories

(Core :: Privacy: Anti-Tracking, defect)

defect

Tracking

()

RESOLVED FIXED
132 Branch
Tracking Status
firefox132 --- fixed

People

(Reporter: fklc, Assigned: fklc)

Details

Attachments

(1 file)

Steps to reproduce
Visit https://abrahamjuliot.github.io/fpworker/, note service worker hash
Visit https://abrahamjuliot.github.io/fpworker/ in another container, note the service worker hash

Expected: Should be different
Actual: They are the same

Why: nsRFPService::GenerateKeyForServiceWorker function creates a principal from the top level URI passed to it, not inheriting the origin attributes.

Pushed by fkilic@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/f4ea4925ea8e Use service worker's origin attributes instead of nothing. r=tjr
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 132 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: