Bug 1920128: Use service worker's origin attributes instead of nothing. r=tjr

Differential Revision: https://phabricator.services.mozilla.com/D222978